@@ -113,6 +113,7 @@ Objetivos secundários incluem:
 
 # Como Rodar a IDE
 - `Para rodar e preciso usar o Comando no CMD: java --module-path "Colocar a Localização o seu javafx-sdk-24.0.1\lib " --add-modules javafx.controls,javafx.fxml -jar Localização do seu jar que esta na pasta da IDE Exemplo: D:\API\API_2\Branchie\API2\DeepCode.jar `
+- Exemplo do que eu faço no meu computador: java --module-path "C:\Users\gutib\Downloads\javafx-sdk-24.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar D:\API\API_2\Branchie\API2\DeepCode.jar
 
 
 # Autores
